@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{crossval}
+\name{resample}
 \alias{bootstrapB632}
 \alias{bootstrapB632plus}
 \alias{bootstrapOOB}
@@ -10,6 +10,9 @@
 \alias{subsample}
 \title{Fit models according to a resampling strategy.}
 \usage{
+resample(learner, task, resampling, measures, weights = NULL,
+  models = FALSE, extract, show.info = getMlrOption("show.info"))
+
 crossval(learner, task, iters = 10L, stratify = FALSE, measures,
   models = FALSE, ..., show.info = getMlrOption("show.info"))
 
@@ -30,9 +33,6 @@ bootstrapB632(learner, task, iters = 30, stratify = FALSE, measures,
 
 bootstrapB632plus(learner, task, iters = 30, stratify = FALSE, measures,
   models = FALSE, ..., show.info = getMlrOption("show.info"))
-
-resample(learner, task, resampling, measures, weights = NULL,
-  models = FALSE, extract, show.info = getMlrOption("show.info"))
 }
 \arguments{
 \item{learner}{[\code{\link{Learner}} | \code{character(1)}]\cr
@@ -42,25 +42,41 @@ If you pass a string the learner will be created via \code{\link{makeLearner}}.}
 \item{task}{[\code{\link{Task}}]\cr
 The task.}
 
+\item{resampling}{[\code{\link{ResampleDesc}} or \code{\link{ResampleInstance}}]\cr
+Resampling strategy.
+If a description is passed, it is instantiated automatically.}
+
+\item{measures}{[\code{\link{Measure}} | list of \code{\link{Measure}}]\cr
+Performance measure(s) to evaluate.}
+
+\item{weights}{[\code{numeric}]\cr
+Optional, non-negative case weight vector to be used during fitting.
+If given, must be of same length as observations in task and in corresponding order.
+Overwrites weights specified in the \code{task}.
+By default \code{NULL} which means no weights are used unless specified in the task.}
+
+\item{models}{[\code{logical(1)}]\cr
+Should all fitted models be returned?
+Default is \code{FALSE}.}
+
+\item{extract}{[\code{function}]\cr
+Function used to extract information from a fitted model during resampling.
+Is applied to every \code{\link{WrappedModel}} resulting from calls to \code{\link{train}}
+during resampling.
+Default is to extract nothing.}
+
+\item{show.info}{[\code{logical(1)}]\cr
+Print verbose output on console?
+Default is set via \code{\link{configureMlr}}.}
+
 \item{iters}{[\code{integer(1)}]\cr
 See \code{\link{ResampleDesc}}.}
 
 \item{stratify}{[\code{logical(1)}]\cr
 See \code{\link{ResampleDesc}}.}
 
-\item{measures}{[\code{\link{Measure}} | list of \code{\link{Measure}}]\cr
-Performance measure(s) to evaluate.}
-
-\item{models}{[\code{logical(1)}]\cr
-Should all fitted models be returned?
-Default is \code{FALSE}.}
-
 \item{...}{[any]\cr
 Further hyperparameters passed to \code{learner}.}
-
-\item{show.info}{[\code{logical(1)}]\cr
-Print verbose output on console?
-Default is set via \code{\link{configureMlr}}.}
 
 \item{folds}{[\code{integer(1)}]\cr
 See \code{\link{ResampleDesc}}.}
@@ -70,22 +86,6 @@ See \code{\link{ResampleDesc}}.}
 
 \item{split}{[\code{numeric(1)}]\cr
 See \code{\link{ResampleDesc}}.}
-
-\item{resampling}{[\code{\link{ResampleDesc}} or \code{\link{ResampleInstance}}]\cr
-Resampling strategy.
-If a description is passed, it is instantiated automatically.}
-
-\item{weights}{[\code{numeric}]\cr
-Optional, non-negative case weight vector to be used during fitting.
-If given, must be of same length as observations in task and in corresponding order.
-Overwrites weights specified in the \code{task}.
-By default \code{NULL} which means no weights are used unless specified in the task.}
-
-\item{extract}{[\code{function}]\cr
-Function used to extract information from a fitted model during resampling.
-Is applied to every \code{\link{WrappedModel}} resulting from calls to \code{\link{train}}
-during resampling.
-Default is to extract nothing.}
 }
 \value{
 List of:
